@@ -1,9 +1,16 @@
+2004-05-23  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/subdaemons.c:
+	    After exec()ing actual subdaemons, the  subdaemon_nofiles
+	    variable must be reinitialized -- doing it in subdaemons_loop()
+	    now.
+
 2004-05-17  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpdata.c:
 	    Report the content-filter result message as single message,
 	    if at all possible.
-	
+
 	* smtpserver/subdaemon-ctf.c:
 	    Detect and process EOF from subdaemon subserver correctly.
 
